
 XGngeo - Changelog
~~~~~~~~~~~~~~~~~~~~

* Changes in version 16 (2006-XX-XX):

- ROM selection in the list doesn't require double click any
more, just single. :p
- New inclusion of a default and clean ROM divers file (aka
romrc) into XGngeo to be sure to obtain something nice to
handle within the frontend (correct ROM full names, etc.).
- LICENSE.txt updated (because of old FSF adress) [Achraf cherti]
- Long name for all new history entry [Achraf cherti] 
- xgngeo.desktop : Freedesktop.org menu entry [Achraf cherti]
- Optional use of Psyco (if module is available) to boost
XGngeo's overall speed performance [Achraf Cherti].
- Bug fix: no more crash when removing an entry which was below
a just removed one in the ROM History menu [Achraf Cherti].
- Improved ROM list refreshing feature (now applied just after
having updated the ROM directory list).
- Increased ROM list displaying speed (especialy when ``Show
available ROM only"option is enabled).
- Bug fix: multiple custom ROM directory paths were considered
as one single big path because of lack of line break in the
related configuration file [patch by Achraf Cherti].
- Several code style improvement.

	Yet present in the beta version:

- Improved ROM detection in the list and file selection
dialog (now directly based upon Gngeo's scaning results:
faster and more accurate!).
- ROM list now supports multiple ROM directories.
- New hot keys configuration support, for the 2 players.
- You can now see a ROM preview image (if activated) when
loading using the file selection dialog.
- New options support: `68kclock', `bench', `hwsurface',
`transpack', `z80clock', `sleepidle'.
- Visual indication of unavaible ROM and ability to remove
entries in the History menu.
- Added possibility to select the new Universal BIOS.
- Added comments and general layout preservative writting
method for the `gngeorc' file.
- Better guessing of the default path to Gngeo's `romrc' file.