@@ -9,7 +9,7 @@ ROM full names, etc.)
 - ROM drivers editing interface (with online synchoniztion
 available).
 - Quick loading menu for favorite ROMs.
-- Ability to remove a ROM from the file system through the ROM
+- [DONE] Ability to remove a ROM from the file system through the ROM
 list window.
 - ROM list generation progress bar.
 - Allowing the user to choose the universal BIOS only if the
