@@ -6,6 +6,8 @@
 
 - ROM selection in the list doesn't require double click any
 more, just single. :p
+- Ability to remove a ROM from the file system through the ROM
+list window.
 - New inclusion of a default and clean ROM divers file (aka
 romrc) into XGngeo to be sure to obtain something nice to
 handle within the frontend (correct ROM full names, etc.).
